Fix JUnit test